= 2.5.0-pre.2 =

- Tweak: Thrown stones and beenades now use Bullseye aiming
- Tweak: Thrown stones, sling stones, and beenades now affected by class damage and velocity traits
- Fixed: Spears don't break when thrown with 1 durability left
- Fixed: Incorrect break chance display for sling stones
- API: All item code migrated to CollectibleBehaviors
--- All BullseyeItem classes are now marked obsolete and preserved for compatibility with older mods
--- Legacy classes no longer support advanced features like ammo selection
- Other: JSON files are now correctly marked as JSON with Comments (JSON-C) in the VS Code workspace

= 2.5.0-pre.1 =

- New: Experimental 'static' aiming style
--- Switch on by chat command `.bullseye set aimstyle fixed` (use `.bullseye set aimstyle free` to switch back) 
- Tweak: Smoother reticle movement when beginning a shot
- Fixed: Crash when trying to shoot a bow with no arrows
- Regression: Temporarily disabled broken bow animations
- Other: Various code improvements


= 2.4.2 =

- Tweak: Arrow upgrade recipe now refunds arrowheads
- Fixed: occasional crashes when player dies while using bow or sling
- Fixed: some JSON still not conforming to strict JSON standard
- Minor bug fixes and code improvements
- Finished ability to compile and debug on Linux (NodeJS required to debug multiplayer)

= 2.4.1 =

- Added knapping recipe for 8 flint and obsidian arrowheads
- Fixed compatibility with Weapons Pack Gamma and AnMiTech
- Fixed potential crash when loading a world is cancelled partway through

= 2.4.0 =

(since 2.4.0-rc.4)

- Add lead sling bullets, and bullet molds to cast them in
--- Lead bullets are faster, stronger, and more accurate ammunition than stones
- Meteoric iron sling stone damage increased to 6
- Crude arrows now have an accuracy penalty; crude bow accuracy increased to compensate
- Crude arrows can now be upgraded to flint arrows by adding feathers